--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
-DATABASE_URL=postgres://postgres:password@host.docker.internal:5433/screener?sslmode=disable
+# Database settings (used by API + Worker inside Docker Compose)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=changeme   # replace locally with a real password
+POSTGRES_DB=screener
+
+# Connection URL for local development
+# For containers, use db:5432
+# For host (psql / migrations), use localhost:5433
+DATABASE_URL=postgres://postgres:changeme@localhost:5433/screener?sslmode=disable
+
+# API service settings
 PORT=8080
-POOL_SIZE=10
-HTTP_TIMEOUT_MS=4000
-RETRY_MAX=1
-RETRY_BASE_MS=300
-RATE_LIMIT_QPS=5
-RESULTS_LIMIT_DEFAULT=100
-WORKER_TICK_MS=60000
+
+# Worker service settings
+# Example: number of concurrent jobs
+WORKER_CONCURRENCY=5
+
+# External API keys (use placeholders here, real keys go only in local .env)
+STOCK_API_KEY=your_api_key_here
